--- a/project/templates/senior/list_view_senior.html
+++ b/project/templates/senior/list_view_senior.html
@@ -33,8 +33,8 @@
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 justify-center gap-4">
             <!-- エリア検索 -->
             <div>
-              <label for="area" class="label-text">都道府県：</label>
-              <select id="area" name="area" class="select select-bordered w-full max-w-xs">
+              <label for="prefecture" class="label-text">都道府県：</label>
+              <select id="prefecture" name="prefecture" class="select select-bordered w-full max-w-xs">
                 <option value="選択なし" selected>選択なし</option>
                 <option value="北海道">北海道</option>
                 <option value="青森県">青森県</option>
@@ -151,11 +151,18 @@
             <div class="bg-white rounded-lg overflow-hidden shadow-md flex">
               <img src="https://via.placeholder.com/300" alt="求人画像" class="w-1/3 h-40 object-cover">
               <div class="w-2/3 p-4">
-                <h2 class="text-xl font-bold text-blue-500 mb-2">求人タイトル1</h2>
-              <p class="text-gray-600 mb-2">企業名: {{ job.company.name }}</p>
-              <p class="text-gray-600 mb-2">勤務地: {{ job.prefecture }}</p>
-              <p class="text-gray-600 mb-2">給与: {{ job.saraly }}</p>
-                <p><a href="#" class="text-green-500 font-bold">詳細情報を見る</a></p>
+                <h2 class="text-xl font-bold text-blue-500 mb-2"> {{ job.title }}</h2>
+                <p class="text-gray-600 mb-2">企業名: {{ job.company.name }}</p>
+                <p class="text-gray-600 mb-2">業種: {{ job.industry }}</p>
+                <p class="text-gray-600 mb-2">職種: {{ job.occupation }}</p>
+                <p class="text-gray-600 mb-2">都道府県: {{ job.prefecture }}</p>
+                <p class="text-gray-600 mb-2">給与: {{ job.saraly }}</p>
+                <details class="collapse bg-base-200">
+                  <summary class="collapse-title text-xl font-medium">詳細情報を見る</summary>
+                  <div class="collapse-content"> 
+                    <p class="text-gray-600 mb-2">{{ job.description }}</p>
+                  </div>
+                </details>
                 <!-- 右側のボタン -->
                 <div class="flex justify-end mt-2">
                   <a href="#" class="bg-blue-500 text-white px-4 py-2 rounded-full mr-2">企業ページへ</a>
