--- a/project/templates/offering/mypage_offering.html
+++ b/project/templates/offering/mypage_offering.html
@@ -20,6 +20,11 @@
                 <!-- ログインかログアウトか -->
                 <div class="mt-4 flex flex-col gap-4 sm:mt-0 sm:flex-row sm:items-center">
                     <button
+                    class="block rounded-lg bg-indigo-600 px-5 py-3 text-sm font-medium text-white transition hover:bg-indigo-700 focus:outline-none focus:ring"
+                    type="button"><a href="{% url 'main_func:search_company_update' %}">
+                    編集</a>
+                    </button>
+                    <button
                         class="block rounded-lg bg-indigo-600 px-5 py-3 text-sm font-medium text-white transition hover:bg-indigo-700 focus:outline-none focus:ring"
                         type="button"><a href="{% url 'accounts:logout'%}">
                         ログアウト</a>
