--- a/project/templates/offering/mypage_offering.html
+++ b/project/templates/offering/mypage_offering.html
@@ -30,32 +30,54 @@
 
     <div class="container mx-auto mt-8 flex flex-wrap justify-center">
         <!-- 上部のカード - プロフィール画像と個人情報 -->
-        <div class="w-full md:w-4/5 lg:w-2/3 bg-white rounded-lg overflow-hidden shadow-lg mb-8">
-            <div class="p-6 flex">
-                <div class="w-1/2">
-                    <div class="w-48 h-48 md:w-64 md:h-64 rounded-full overflow-hidden border-4 border-gray-100 mx-auto">
+        <div class="sm:w-4/5 md:w-4/5 lg:w-4/5 bg-white rounded-lg overflow-hidden shadow-lg mb-8">
+            <div class="p-6 flex flex-col sm:flex-row">
+                <div class="w-full sm:w-1/2 mb-4 sm:mb-0 flex items-center">
+                    <div class="w-full h-48 md:w-64 md:h-64 rounded-full overflow-hidden border-4 border-gray-100">
                         <img src="https://placekitten.com/150/150" alt="プロフィール画像" class="w-full h-full object-cover">
                     </div>
                 </div>
-                <div class="w-1/2 pl-8">
-                    <div class="mt-4 text-left">
-                        <h2 class="text-5xl font-semibold text-gray-800 mb-4 whitespace-nowrap overflow-ellipsis">山田 太郎</h2>
-                        <p class="text-3xl whitespace-nowrap overflow-ellipsis">本社所在</p>
-                        <p class="text-2xl whitespace-nowrap overflow-ellipsis">京都府京都市京都町</p>
-                        <p class="text-3xl whitespace-nowrap overflow-ellipsis">業種流通・小売・フード</p>
-                        <p class="text-2xl whitespace-nowrap overflow-ellipsis">小売・フード</p>
-                        <p class="text-3xl whitespace-nowrap overflow-ellipsis">企業HP</p>
-                        <p class="text-1xl whitespace-nowrap overflow-ellipsis">
-                            <a href="https://www.scsk.jp/" target="_blank" style="color: blue; text-decoration: none;">
-                                https://www.scsk.jp/ 
-                            </a>
-                          </p>
-                    </div>
-                </div>
+                <div class="mt-4 text-left">
+                    <h2 class="text-5xl font-semibold text-gray-800 mb-4"><i class="fas fa-user"></i>山田 太郎</h2>
+                    <p class="text-2xl text-gray-500 mb-2"><i class="fas fa-industry"></i> 業種:</p>
+                    <p class="text-3xl text-gray-800 mb-2 ml-4">流通・小売・フード</p>
+                    <p class="text-2xl text-gray-500 mb-2"><i class="fas fa-paint-brush"></i> 職種:</p>
+                    <p class="text-3xl text-gray-800 mb-2 ml-4">クリエイティブ</p>
+                    <p class="text-2xl text-gray-500 mb-2">本社所在地:</p>
+                    <p class="text-3xl text-gray-800 mb-2 ml-4">京都府京都市</p>
+                    <p class="text-2xl text-gray-500 mb-2"></i> 性別: </p>
+                    <p class="text-3xl text-gray-800 mb-2 ml-4">男性</p>
+                    <p class="text-2xl text-gray-500 mb-2"></i> 会社HP: </p>
+                    <p class="text-1xl whitespace-nowrap overflow-ellipsis ml-4">
+                        <a href="https://www.scsk.jp/" target="_blank" style="color: blue; text-decoration: none;">
+                            https://www.scsk.jp/ 
+                        </a>
+                      </p>
+                </div>                
             </div>
         </div>
 
         <!-- 下部のカード - 経歴 -->
+        <div class="sm:w-4/5 md:w-4/5 lg:w-4/5 bg-white rounded-lg overflow-hidden shadow-md flex flex-col mb-8">
+            <h1 class="text-xl font-bold text-black-500 mb-2">現在募集中の求人</h1>
+            <div class="bg-white rounded-lg overflow-hidden shadow-md flex space-x-4">
+                <img src="https://via.placeholder.com/300" alt="求人画像" class="w-1/3 h-40 object-cover">
+                <div class="w-1/3 md:w-3/5 lg:w-3/5 p-4">
+                    <h2 class="text-xl font-bold text-blue-500 mb-2">求人タイトル1</h2>
+                    <p class="text-gray-600 mb-2">勤務地: {{ job.prefecture }}</p>
+                    <p class="text-gray-600 mb-2">給与: {{ job.salary }}</p>
+                    <p><a href="#" class="text-green-500 font-bold">詳細情報を見る</a></p>
+                    <!-- 右側のボタン -->
+                    <div class="flex justify-end mt-2">
+                        <a href="#" class="bg-blue-500 text-white px-4 py-2 rounded-full mr-2">企業ページへ</a>
+                        <a href="#" class="bg-yellow-500 text-white px-4 py-2 rounded-full">連絡する</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        
+
         <div class="w-full md:w-full lg:w-full bg-white rounded-lg overflow-hidden shadow-lg mb-8 mx-4">
             <div class="p-6">
                 <h2 class="text-3xl font-semibold text-gray-800 mb-4">経歴</h2>
