--- a/project/templates/senior/mypage_senior.html
+++ b/project/templates/senior/mypage_senior.html
@@ -10,7 +10,6 @@
 
 </head>
 <body class="bg-gray-100 font-sans text-gray-800">
-
     <header>
         <div class="mx-auto px-4 py-2 sm:px-6 sm:py-4 lg:px-8 border bg-white">
           <div class="sm:flex sm:items-center sm:justify-between">
@@ -40,14 +39,22 @@
                     </div>
                 </div>
                 <div class="mt-4 text-left">
-                    <h2 class="text-5xl font-semibold text-gray-800 mb-4"><i class="fas fa-user"></i>山田 太郎</h2>
-                    <p class="text-2xl text-gray-500 mb-2">年齢: <span class="text-3xl text-gray-800">70歳</span></p>
+                    <h2 class="text-5xl font-semibold text-gray-800 mb-4"><i class="fas fa-user"></i>{{ object.name }}</h2>
+                    <p class="text-2xl text-gray-500 mb-2">年齢: <span class="text-3xl text-gray-800">{{ object.age }}</span></p>
                     <p class="text-2xl text-gray-500 mb-2"></i> 性別: <span class="text-3xl text-gray-800">男性</span></p>
+                    <p class="text-2xl text-gray-500 mb-2"></i> 所在: <span class="text-3xl text-gray-800">{{ object.address }}</span></p>
                     <p class="text-2xl text-gray-500 mb-2"><i class="fas fa-industry"></i> 業種:</p>
                     <p class="text-3xl text-gray-800 mb-2 ml-4">流通・小売・フード</p>
                     <p class="text-2xl text-gray-500 mb-2"><i class="fas fa-paint-brush"></i> 職種:</p>
                     <p class="text-3xl text-gray-800 mb-2 ml-4">クリエイティブ</p>
-                </div>                
+                </div>        
+                
+                <!-- 編集ボタン -->
+                <div class="mt-4 ml-auto">
+                    <a href="test_update_senior/{{ object.senior_id }}/" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                        編集する
+                    </a>
+            </div>     
             </div>
         </div>
 
@@ -56,14 +63,7 @@
             <div class="p-6">
                 <h2 class="text-3xl font-semibold text-gray-800 mb-4">経歴</h2>
                 <div class="mb-4">
-                    <p class="text-2xl font-semibold">株式会社 XYZ</p>
-                    <p class="text-xl">役職: シニアデベロッパー</p>
-                    <p class="text-lg text-gray-600">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et turpis ac nisi iaculis dapibus. Proin aliquet cursus libero, id volutpat quam feugiat nec.</p>
-                </div>
-                <div>
-                    <p class="text-2xl font-semibold">以前の会社</p>
-                    <p class="text-xl">役職: ジュニアデベロッパー</p>
-                    <p class="text-lg text-gray-600">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et turpis ac nisi iaculis dapibus. Proin aliquet cursus libero, id volutpat quam feugiat nec.</p>
+                    <p class="text-5xl font-semibold">{{ object.description | linebreaks }}</p>
                 </div>
             </div>
         </div>
